<resources>
    <string name="app_name">Toko Buku</string>
    <string name="keranjang">Keranjang</string>
    <string name="home">Home</string>
    <string name="riwayat">Riwayat</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="konfir_pass">Confirm Password</string>
    <string name="default_notification_channel_id" translatable="false">tokobuku</string>
    <string name="pengertian_tokoonline">Menurut Kamus Besar Bahasa Indonesia (KBBI), toko adalah kedai berupa bangunan permanen tempat menjual barang-barang (makanan kecil dan sebagainya). Sedangkan menurut wikipedia, online atau daring adalah menunjukkan keadaan konektivitas, dalam hal ini tentu saja saat terhubung dengan internet.</string>
    <string name="pengertian_toko_buku">Toko buku adalah toko yang menyediakan buku-buku yang dijual secara daring sehingga memudahkan konsumen untuk membeli buku yang diinginkan. Aplikasi ini memiliki fitur jasa pengiriman yang dapat mengantarkan pesanan sampai kerumah.</string>
    <string name="langkah_pertama">Langkah pertama yang harus dilakukan, anda harus melakukan proses registrasi akun terlebih dahulu agar dapat melakukan proses transaksi di dalam aplikasi.</string>
    <string name="langkah_kedua">Langkah kedua anda dapat melakukan proses transaksi apabila anda telah memiliki akun. Dalam proses transaksi anda harus tetapkan alamat agar sistem dapat menghitung ongkos kirim sesuai dengan alamat anda.</string>
    <string name="langkah_ketiga">Jika anda membeli sebuah produk, anda dapat memilih jasa pengiriman yang tampil pada halaman pembayaran dengan catatan alamat anda harus ada.</string>
    <string name="langkah_empat">Setelah selesai, anda dapat memilih metode pembayaran yang ada. Setelah itu produk yang anda pesan secara otomatis terkirim ke penjual.</string>
    <string name="langkah_lima">Metode pembayaran yang dilakukan dengan menggunakan metode transfer tunai kerekening yang disediakan disistem.</string>
</resources>